# Ask-My-Repo

./: .env.example  .gitignore  .vercelignore  README.md  app.py  main.py  package-lock.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
notebook/: graph.html  test.ipynb
src/backend/: api.py  job_status.py
src/backend/agent_state/: state.py
src/backend/chat_engine/: engine.py
src/backend/chunking/: chunk_builder.py  repo_parser.py
src/backend/map/: mapper.py
src/backend/services/: graph_db.py  llm_fallback.py  query_engine.py  repo_activity.py  vector_db.py
src/evaluation/: eval.py  questions.json
src/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.jsx  dashboard.css  index.css  landing.css  main.jsx  utils.js
src/frontend/src/components/: BrandLogo.jsx  InteractiveBackground.jsx  LandingPage.jsx
src/frontend/src/components/graph/: CustomNodes.jsx  ReactFlowGraph.jsx
src/frontend/src/components/layout/: DashboardLayout.jsx
src/frontend/src/components/panels/: ChatHistory.jsx  NodeDetails.jsx  SetupPanel.jsx
src/frontend/src/components/sidebar/: Explorer.jsx  QueryPanel.jsx  Statistics.jsx
src/frontend/src/hooks/: useSmoothMouse.js
