[project]
name = "repo-2-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.3",
    "pyvis>=0.3.2",
    "neo4j",
    "chromadb",
    "openai>=1.0.0",
    "langgraph>=0.1.0",
    "langchain_community>=0.2.0",
    "langchain_groq>=0.1.0",
    "langchain_openai>=0.1.0",
    "ragas",
    "pillow",
    "transformers"
]
